--- a/pug/includes/mixins.pug
+++ b/pug/includes/mixins.pug
@@ -1,114 +1,21 @@
 mixin getListado(objLista)
-    
         each obj in objLista
-            .d-flex.align-items-center
+            .d-flex.align-items-center.justify-content-center
                 if(obj.icon != "fas fa-circle")
-                    img(src=`${obj.icon}`, alt="", width="30", height="30")
+                    img(src=`${obj.icon}`, alt="", width="30", height="30").p-1
                 else
-                    i(class=`${obj.icon} fa-sm`)
+                    i(class=`${obj.icon} fa-xs text-info`)
 
-                li.ml-2.my-3= obj.name 
+                li.ml-2.mr-3.my-3.open-sans-700= obj.name 
 
-mixin modal1(obj)
-    <div class="modal fade" id="basicExampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    h5(class="modal-title")= obj.tittle
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    +contentModal(obj.features, obj.img)
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
+mixin getListadoModal(obj)
+        .d-flex.align-items-center.justify-content-start
+            if(obj.icon != "fas fa-circle")
+                img(src=`${obj.icon}`, alt="", width="30", height="30").p-1
+            else
+                i(class=`${obj.icon} fa-xs text-info m-2`)
+            p.mx-2.my-2.open-sans-300= obj.name 
 
-mixin modal2(obj)
-    <div class="modal fade" id="basicExampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    h5(class="modal-title")= obj.tittle
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    +contentModal(obj.features, obj.img)
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-
-mixin modal3(obj)
-    <div class="modal fade" id="basicExampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    h5(class="modal-title")= obj.tittle
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    +contentModal(obj.features, obj.img)
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-mixin card1(title, image, description)
-    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card#totem
-        .card.align-items-center
-            .card-header
-                h2.card-tittle= title
-            img(src=`img/assets/${image}`, class="card-img-top img-fluid")
-            .card-body
-                p.card-text= description
-                .contenedor-boton
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal1">Ver Mas</button>
-
-mixin card2(title, image, description)
-    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card
-        .card.align-items-center
-            .card-header
-                h2.card-tittle= title
-            img(src=`img/assets/${image}`, class="card-img-top img-fluid")
-            .card-body
-                p.card-text= description
-                .contenedor-boton
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal2">Ver Mas</button>
-
-mixin card3(title, image, description)
-    .col-12.col-sm-12.col-md-4.mb-4.d-flex.contenedor-card
-        .card.align-items-center
-            .card-header
-                h2.card-tittle= title
-            img(src=`img/assets/${image}`, class="card-img-top img-fluid")
-            .card-body
-                p.card-text= description
-                .contenedor-boton
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal3">Ver Mas</button>
-
-mixin contentModal(content, image)
-    each c in content
-        p= c.name
 
 mixin contactForm()
     <form class="text-center white p-3 rounded-lg open-sans z-depth-2" action="#!">
@@ -130,3 +37,42 @@ mixin contactForm()
         </div>
         <button class="btn btn-info btn-block" type="submit">Enviar</button>
     </form>
+
+
+mixin modal(fullProduct)
+    each fp in fullProduct
+        .modal.fade.open-sans(id=`${fp.id}` tabindex="-1" role="dialog" aria-labelledby=`${fp.id}` aria-hidden="true")
+            <div class="modal-dialog" role="document">
+                <div class="modal-content ">
+                    <div class="modal-header rounded-xl bg-info z-depth-1-half border border-0 position-relative z-index-5">
+                        .text-white
+                            h3.modal-title.open-sans-700.text-shadow= fp.title
+                            p.open-sans.font-small.d-inline-block.m-0.text-shadow.text-uppercase= fp.text
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body position-relative z-index-5">
+                        p.open-sans-700.text-uppercase.spancing-2.text-info.m-0 Incluye:
+                        +contentModal(fp)
+                    </div>
+                </div>
+            </div>
+
+mixin contentModal(fullProduct)
+    -let { features } = fullProduct;
+    each f in features
+        +getListadoModal(f)
+
+
+mixin card(fullProduct)
+    .row
+        each fp in fullProduct
+            .col-12.col-sm-12.col-md-4.mb-4
+                - let { cardData } = fp;
+                .card.text-center.open-sans.position-relavite.z-index-4.rounded-xl.z-depth-2.w-75.mx-auto(class=`${cardData.class}`)
+                    .position-relavite.z-index-5
+                        .card-body.card-inner.z-depth-1-half
+                            h2.text-uppercase.font-weight-bold.spacing-2= cardData.name
+                            p.open.sans-300.card-text= cardData.description
+                            button(type="button", class="btn btn-black rounded-xl open-sans-700 spacing-2", data-toggle="modal", data-target=`#${fp.id}`) saber mas
