--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -5,8 +5,8 @@ block append config
 block append content
     section#nosotros.d-flex.aling-items-center
         include nosotros.pug
-    section#modulos-sanitizantes
-        .container
+    section#modulos-sanitizantes.open-sans 
+        .container.py-3
             include modulos.pug
     section#contacto.d-flex.align-items-center
             include contacto.pug
