--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin maskAfter($color: #000, $opacity: 0.7) {
+@mixin maskAfter($round: false, $color: #000000) {
     &:after{
         content: "";
         display: block;
@@ -12,7 +12,29 @@
         margin: auto;
         position: absolute;
         z-index: 2;
-        background-color: rgba($color: $color, $alpha: $opacity);
+        @if $round {
+            border-radius: 0.7rem;
+        }
+        background-color: rgba($color: $color, $alpha: 0.7);
+    }
+}
+@mixin maskAfterGradient($round: false) {
+    &:after{
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        position: absolute;
+        z-index: 2;
+        border-radius: 0.7rem;
+        background: linear-gradient(144deg, rgba(255,255,255,1) 0%, rgba(227,225,225,0.9) 51%, rgba(188,244,255,0.7) 100%);
+
     }
 }
 
@@ -27,5 +49,5 @@
     height: 100vh;
     position: relative;
     z-index: 1;
-    @include maskAfter(#000,0.8);
+    @include maskAfter();
 }
