--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -1,15 +1,20 @@
-#contacto{
-    @include setImageWithMask("constructora.png");
-    &-grid{
-        position: relative;
-        z-index: 5;
-        display: grid;
-        grid-template: {
-            columns: 1fr;
-            rows: 100%;
-            
-        }
-        align-items: center;
-        justify-items: center;
+#contacto {
+  @include setImageWithMask("constructora.png");
+  &-grid {
+    position: relative;
+    z-index: 5;
+    display: grid;
+    grid-template: {
+      columns: 1fr;
+      rows: 100%;
     }
+    align-items: center;
+    justify-items: center;
+    .errores {
+      font-size: 14px;
+      background-color: red;
+      color: #fff;
+      display: none;
+    }
+  }
 }
