--- a/pug/pages/contacto.pug
+++ b/pug/pages/contacto.pug
@@ -1,2 +1,6 @@
-#contacto-grid.container.open-sans
-    +contactForm()
+#grid-contacto
+    .grid-title
+        p.h2.my-2 CONSULTAS
+        p Para solicitar presupuesto, por favor deje sus datos aquí:
+    .grid-form
+        +contactForm()
