--- a/pug/pages/index.pug
+++ b/pug/pages/index.pug
@@ -10,7 +10,9 @@ block append content
             include modulos.pug
     section#productos-buscador
         include productos.pug
-    section#nosotros.d-flex.aling-items-center
-        include nosotros.pug
-    section#contacto.d-flex.align-items-center
-            include contacto.pug
+    section#nuestros-clientes
+        include nuestros-clientes.pug
+    section#redes-sociales
+        include redes-sociales.pug 
+    section#contacto
+        include contacto.pug
