--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @import 'nosotros.scss';
 @import 'contacto.scss';
 @import "modulos";
+@import "productos";
+@import "nuestros-clientes";
 @import "home.scss"; //official
 
 .d-grid {
