--- a/css/main.css
+++ b/css/main.css
@@ -248,39 +248,19 @@
   align-self: start;
 }
 
-#contacto {
-  background-image: url("../img/assets/constructora.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  z-index: 1;
-}
-#contacto:after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  position: absolute;
-  z-index: 2;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-#contacto-grid {
-  position: relative;
-  z-index: 5;
+#grid-contacto {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 100%;
-  align-items: center;
-  justify-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+#grid-contacto .grid-title {
+  align-self: center;
+  justify-self: center;
+}
+#grid-contacto .grid-form {
+  padding: 50px;
+  align-self: center;
+  justify-self: center;
 }
 
 #porticopec .modal-content {
@@ -321,6 +301,52 @@
   z-index: -1;
   max-width: 200px;
   opacity: 0.2;
+}
+
+@media (min-width: 1199px) {
+  #grid-productos {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 80px);
+  }
+}
+#grid-productos .grid-productos-1 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  align-self: center;
+  justify-self: center;
+}
+#grid-productos .grid-productos-2 {
+  grid-column: 2/3;
+  grid-row: 1/4;
+  align-self: center;
+  justify-self: center;
+}
+
+#grid-clientes {
+  display: grid;
+  grid-template-columns: 1fr 50%;
+  grid-template-rows: 1fr;
+}
+#grid-clientes .img-clientes {
+  background-image: url("../img/assets/Img_fondo_clientes.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 600px;
+  position: relative;
+  z-index: 4;
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+#grid-clientes .text-clientes {
+  color: white;
+  text-align: center;
+  position: relative;
+  z-index: 5;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  align-self: center;
+  justify-self: center;
 }
 
 #home {
