--- a/pug/pages/productos.pug
+++ b/pug/pages/productos.pug
@@ -1,13 +1,16 @@
-.grey.lighten-3.py-3
+.grey.lighten-3.py-4
     .container
-        .row
-            .col-12
+        .d-grid#grid-productos
+            .grid-productos-1
                 .text-center
                     h5.open-sans-700 UNA SOLUCIÓN PARA CADA NECESIDAD 
                     h3.open-sans-700 CONOCE TODOS NUESTROS MÓDULOS
-
                 .w-75.mx-auto   
                     //- Search form 
                     form.form-inline.d-flex.justify-content-center.md-form.form-sm
                         input.form-control.form-control-sm.mr-3.w-75(type="text", placeholder="Search", aria-label="Search")
                         i.fas.fa-search(aria-hidden="true")
+                        
+            .grid-productos-2
+                .position-relative.z-index-5
+                    img(src="./img/assets/Cabina_Render-22.png", alt="", height="500")
